@@ -9,17 +9,18 @@ import java.io.IOException;
 import java.math.BigInteger;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import java.util.stream.Stream;
-
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-@Service
 @Slf4j
+@Service
+@RequiredArgsConstructor
 public class ImageServiceImpl implements IImageService {
 
     private final ImageRepository imageRepository;
@@ -28,44 +29,44 @@ public class ImageServiceImpl implements IImageService {
     @Value("${upload.extensions}")
     private String propertiesValues;
 
-    public ImageServiceImpl(ImageRepository imageRepository, IMessageService messageService){
-        this.imageRepository = imageRepository;
-        this.messageService = messageService;
-    }
-
     @Override
     public Image saveImage(MultipartFile file) throws IOException {
         if(this.validExtensionImage(file.getOriginalFilename())){
-            Image image = new Image();
             byte[] deserializedFile = file.getBytes();
-            image.setTitle(file.getOriginalFilename());
-            image.setHash(deserializedFile);
+            Image image = Image.builder()
+                    .hash(deserializedFile)
+                    .title(file.getOriginalFilename())
+                    .build();
             image.setSize(new BigInteger(String.valueOf(deserializedFile.length)));
             return this.imageRepository.save(image);
         }else{
             return null;
         }
     }
+
     @Override
-    public void deleteImageById(Long id) {
+    public void deleteImageById(UUID id) {
         Optional<Image> imageExists = this.imageRepository.findById(id);
         imageExists.orElseThrow(() -> new ImageException(HttpStatus.NOT_FOUND,
                 this.messageService.getProperty("image.not.found")));
         this.imageRepository.deleteById(id);
     }
+
     @Override
-    public Image findImageById(Long id) {
+    public Image findImageById(UUID id) {
         Optional<Image> imageExists = this.imageRepository.findById(id);
         imageExists.orElseThrow(() -> new ImageException(HttpStatus.NOT_FOUND,
                 this.messageService.getProperty("image.not.found")));
         return imageExists.get();
     }
+
     @Override
     public List<Image> findAllImages() {
         return this.imageRepository.findAll();
     }
+
     @Override
-    public Image updateImageById(Long id, MultipartFile file) throws IOException {
+    public Image updateImageById(UUID id, MultipartFile file) throws IOException {
         Optional<Image> imageExists = this.imageRepository.findById(id);
         imageExists.orElseThrow(() -> new ImageException(HttpStatus.NOT_FOUND,
                 this.messageService.getProperty("image.not.found")));
@@ -78,13 +79,14 @@ public class ImageServiceImpl implements IImageService {
             return null;
         }
     }
+
     private Boolean validExtensionImage(String completeResourceName){
         /*Creamos un Stream por cada valor que traemos de la property que está separado por coma.
         Es decir, cada que encuentre una coma, creará un nuevo Objeto del tipo String
         con el valor que le corresponde consiguiente a la coma*/
         List<String> propertiesValues = Stream.of(this.propertiesValues.split(","))
-                .map(elem -> new String(elem))
-                .collect(Collectors.toList());
+                .map(String::new)
+                .toList();
 
         for(String extension: propertiesValues){
             if(completeResourceName.contains(extension)){
